bin foreman version config

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "esbuild": "^0.14.53",
-    "sass": "^1.54.1"
+    "sass": "^1.54.2"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
