Se crean los archivos para hosteo en Railways

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,7 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  url: <%= ENV['DATABASE_URL'] %>
+  database: railwayapp_production
+  username: railwayapp
+  password: <%= ENV['RAILWAYAPP_DATABASE_PASSWORD'] %>
